package entregas.NevesKelvia.Ejercicio1;

class ImprimirPantalla extends Frames {
    ImprimirPantalla() {
        super();
    }
}
