package entregas.NevesKelvia.Ejercicio1;

class Representacion extends Frames {
    Representacion() {
        super();
    }
}