package entregas.NevesKelvia.Ejercicio2;

class Pixel {
    public char getPixel(char[][] frame, int x, int y) {
        return frame[x][y];
    }
}

